# TUSUR

PP/first_lab/: main.py  pyproject.toml
PP/first_lab/first_lab/: __init__.py  dilate.py  t.py
PP/first_lab/tests/: __init__.py  test_images.py
PP/second_lab/: main.py  pyproject.toml
PP/second_lab/second_lab/: __init__.py  prgrm_A.py  prgrm_B.py  prgrm_C.py
PP/second_lab/tests/: test_images.py
